Boxscore page now consistent with Roster page

--- a/templates/boxscore.html
+++ b/templates/boxscore.html
@@ -253,7 +253,7 @@
             <a href="/seasons">Seasons</a>
             <span>></span>
             {% if season_filter_number %}
-                <a href="/season/{{ season_filter_number }}">Season</a>
+                <a href="/season/{{ season_filter_number }}">{{ season_name }}</a>
                 <span>></span>
                 <a href="/team/{{ home_team.TeamNumber }}">{{ home_team_name }}</a>
                 <span>></span>
