--- a/templates/player_detail.html
+++ b/templates/player_detail.html
@@ -381,7 +381,7 @@
                 <table id="statsTable">
                     <thead>
                         <tr>
-                            <th class="sortable" data-column="0" data-type="text">Season</th>
+                            <th class="sortable" data-column="0" data-type="text" style="text-align: left;">Season</th>
                             <th class="sortable" data-column="1" data-type="number">G</th>
                             <th class="sortable" data-column="2" data-type="number">PA</th>
                             <th class="sortable" data-column="3" data-type="number">AB</th>
