Update standings logic, template and route to accommodate ties

--- a/templates/boxscore.html
+++ b/templates/boxscore.html
@@ -319,7 +319,7 @@
             <table class="batting-table">
                 <thead>
                     <tr>
-                        <th>Player</th>
+                        <th style="text-align: left;">Player</th>
                         <th>PA</th>
                         <th>AB</th>
                         <th>R</th>
@@ -399,7 +399,7 @@
             <table class="batting-table">
                 <thead>
                     <tr>
-                        <th>Player</th>
+                        <th style="text-align: left;">Player</th>
                         <th>PA</th>
                         <th>AB</th>
                         <th>R</th>
