--- a/templates/player_detail.html
+++ b/templates/player_detail.html
@@ -461,7 +461,7 @@
                 </table>
                 {% if aggregated_teams %}
                 <p style="font-size: 0.8em; color: #666; margin-top: 10px;">
-                    * Pre-aggregated season totals (may include additional games not shown individually)
+                    * Season stats are aggregated. Individual game data not available
                 </p>
                 {% endif %}
             </div>
